# libfoxenmem

./: README.md  meson.build
foxen/: mem.c  mem.h
test/: test_mem.c  test_mem_alloc.c
